:rocket: Init commit

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webpack</title>
+    <title>Webpack + three.js</title>
   </head>
   <body>
-    <h1>Dummy</h1>
-    <h2>Dummy</h2>
-    <h3>Dummy</h3>
-    <p>Dummy</p>
+    <canvas class="webgl"></canvas>
   </body>
 </html>
